--- a/index.html
+++ b/index.html
@@ -320,7 +320,9 @@
     <div id="bottom">
       
 
-      <div id="musicplayer"><table><tr><td><div class="controls"><div class="play" style="display:inline-block"><i class="fas fa-play" onclick="play()"></i></div></div></td><td><div class="songtitle"><marquee scrollamount="10">Flashbacker - kessoku band</marquee></div></td></tr></table><audio id="music" src="Flashbacker.mp3"></audio> 
+      <div id="musicplayer"><table><tr><td><div class="controls"><div class="play" style="display:inline-block">
+        <i class="fas fa-play" onclick="play()"></i></div></div></td><td><div class="songtitle">
+        <marquee scrollamount="10">Kessoku Band - Flashbacker</marquee></div></td></tr></table><audio id="music" src="Flashbacker.mp3"></audio> 
       </div><script>
       let player = document.getElementById("music");
        
